--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
+iframe {
+  width: 100%;
+}
+
 .main {
   display: grid;
   grid-gap: 10px;
@@ -19,7 +23,4 @@
   grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 4;
-}
-video {
-  width: 100%;
 }
