--- a/style.css
+++ b/style.css
@@ -5,6 +5,9 @@
 
 iframe {
   width: 100%;
+  border-radius: 6px;
+  display: block;
+  margin: auto;
 }
 
 #nav {
@@ -26,21 +29,21 @@ iframe {
   padding: 0.25em;
 }
 
-.vis {
-  grid-column-start: 2;
-  grid-column-end: 4;
-  grid-row-start: 2;
-  grid-row-end: 4;
-}
-
 .wiki {
-  grid-column: 1;
+  grid-column: 4;
   grid-row-start: 2;
   grid-row-end: 4;
 }
 
 .NER {
-  grid-column: 4;
+  grid-column: 1;
+  grid-row-start: 2;
+  grid-row-end: 4;
+}
+
+.vis {
+  grid-column-start: 2;
+  grid-column-end: 4;
   grid-row-start: 2;
   grid-row-end: 4;
 }
