--- a/style.css
+++ b/style.css
@@ -51,12 +51,12 @@ iframe {
 .tab {
   overflow: hidden;
   border: 1px solid #ccc;
-  background-color: #f1f1f1;
+  background-color: #b4d0db;
 }
 
 /* Style the buttons that are used to open the tab content */
 .tab button {
-  background-color: inherit;
+  background-color: #f1f1f1;
   float: left;
   border: none;
   outline: none;
@@ -79,9 +79,15 @@ iframe {
 .tabcontent {
   display: none;
   padding: 6px 12px;
-  border: 1px solid #ccc;
+  /*border: 1px solid #ccc;*/
   border-top: none;
-    grid-column: 1;
-  grid-row-start: 2;
-  grid-row-end: 4;
+}
+
+.heading {
+  border: 1px solid #ccc;
+  background-color: #b4d0db;
+  padding: 14px 16px;
+  text-align: center;
+  text-rendering: auto;
+
 }
