--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ iframe {
 }
 
 #nav {
-  background-color: #fdf1d6;
+  background-color: rgba(75, 45, 46, 0.4);
   text-align: center;
   padding: 20px;
   margin: 3px;
@@ -81,7 +81,7 @@ iframe {
   padding: 6px 12px;
   border: 1px solid #ccc;
   border-top: none;
-    grid-column: 1;
+  grid-column: 1;
   grid-row-start: 2;
   grid-row-end: 4;
 }
