--- a/style.css
+++ b/style.css
@@ -140,10 +140,23 @@ form.example::after {
   overflow-y: scroll;
 }
 
-p {
+.about {
+  max-width: 100%;
+  margin: 0 auto;
+  padding: 30px 60px;
+  background-color: rgba(180, 208, 219, 0.3);
+  border-radius: 8px;
+  text-align: center;
+}
+
+.about_text {
   font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   line-height: 1.2;
   text-align: justify;
+  max-width: 80%;
+  padding: 20px;
+  margin: 5px;
+  border: 10px;
 }
 
 h1 {
@@ -153,4 +166,8 @@ h1 {
   padding: 10px;
   text-align: center;
   color: #fdf1d6;
+}
+
+a {
+  text-align: center;
 }
