--- a/style.css
+++ b/style.css
@@ -172,6 +172,11 @@ a {
   text-align: center;
 }
 
+form#type-selector label {
+  padding-left: 5px;
+  padding-right: 10px;
+}
+
 li.entity-link {
   cursor: pointer;
 }
